# tp_nlp_tokens_mines

./: .gitignore  RAPORT.md  README.md  pyproject.toml
tp_tokens/: datasets.py  ffn.py  scraping_data.py  sentences.py  token_sequence.py  words.py
tp_tokens/scripts/: ffn_train.py  generate.py  scraping.py
