[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tp_tokens"]

[project]
name = "tp_tokens"
version = "0.2"
description = "Travaux pratiques sur les tokens du cours NLP des mines de Paris"
authors = [
{ name = "Georges-Andre Silber", email = "georges-andre.silber@minesparis.psl.eu" },
{ name = "Léo Roux", email = "leo.roux@etu.minesparis.psl.eu" }
]
license = { text = "CeCILL-B" }
readme = "README.md"

keywords = ["nlp"]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "jupyterlab",
    "numpy",
    "matplotlib",
    "torch",
    "tokenizers",
]


[project.scripts]
train_generate_ffn = "tp_tokens.scripts.ffn_train:main"
scrape_data = "tp_tokens.scripts.scraping:main"
generate = "tp_tokens.scripts.generate:main"
